# pypackproxy

./: CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg
docs/: config.html  genindex.html  index.html  intro.html  license.html  objects.inv  overview.html  search.html  searchindex.js
docs/_sources/: config.rst.txt  index.rst.txt  intro.rst.txt  overview.rst.txt
docs/_static/: custom.css
src/pypackproxy/: __init__.py  __main__.py  configuration.py  packages.py  packs.py  renderer.py  root.py  simple.py  utils.py
src/pypackproxy/data/: admin.mako  base.mako  config_spec.ini  index.mako  login.mako  overview.mako  project.mako
src/pypackproxy/templates/: admin.html  base.html  index.html  login.html  overview.html  project.html
