[metadata]
name: pypackproxy
version: 0.0.2
url: https://andreas19.github.io/pypackproxy/
project_urls: Source code=https://github.com/andreas19/pypackproxy/
author: Andreas Suhre
author_email: andreas19@posteo.eu
classifiers:
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent
license: BSD-3-Clause
license_file: LICENSE.txt
description: ./.
long_description: file:README.md,CHANGELOG.md
long_description_content_type: text/markdown

[options]
install_requires:
   cherrypy ~= 18.5
python_requires: >=3.8
packages: find:
package_dir: =src

[options.packages.find]
where=src

# [options.extras_require]
# EXTRA = PACK1; PACK2; ...

# [options.package_data]
# * = 

# [options.entry_points]
# console_scripts = 
#    SCRIPTNAME = pypackproxy.MODULE:FUNCTION
