[metadata]
name: pypackproxy
version: 0.1.0
url: https://andreas19.github.io/pypackproxy/
project_urls: Source code=https://github.com/andreas19/pypackproxy/
author: Andreas Suhre
author_email: andreas19@posteo.eu
classifiers:
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: Unix
license: BSD-3-Clause
license_file: LICENSE.txt
description: A caching proxy for Python package indexes.
long_description: file:README.md,CHANGELOG.md
long_description_content_type: text/markdown

[options]
install_requires:
   cherrypy ~= 18.5
   packaging >= 20.1
   plac ~= 1.1
   requests >= 2.22.0
   salmagundi >= 0.11.3
python_requires: >=3.7
packages: find:
package_dir: =src

[options.packages.find]
where=src

[options.package_data]
* = *.ini, favicon.ico

[options.entry_points]
console_scripts = 
   pypackproxy = pypackproxy.__main__:entry_point
